iniciando modulo novo

--- a/layout/IconAlert.qrc
+++ b/layout/IconAlert.qrc
@@ -1,5 +1,6 @@
 <RCC>
   <qresource prefix="dialog">
+    <file>estoque/positiv.png</file>
     <file>estoque/Alert.png</file>
   </qresource>
 </RCC>
