--- a/layout/entradaEstoque.ui
+++ b/layout/entradaEstoque.ui
@@ -3275,7 +3275,7 @@
              <string/>
             </property>
             <property name="maxLength">
-             <number>25</number>
+             <number>29</number>
             </property>
             <property name="placeholderText">
              <string>CNMKJ6FD2K4CCP6CVRG47H67X</string>
@@ -3671,7 +3671,7 @@
              <string/>
             </property>
             <property name="maxLength">
-             <number>25</number>
+             <number>29</number>
             </property>
             <property name="placeholderText">
              <string>HTRHTXTHTGGBWCG4MTMPHH64C</string>
@@ -4261,7 +4261,7 @@
             <string/>
            </property>
           </widget>
-          <widget class="QPushButton" name="pushButtonCancelarOutro">
+          <widget class="QPushButton" name="ButtonCancelarOutro">
            <property name="sizePolicy">
             <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
              <horstretch>1</horstretch>
@@ -4290,7 +4290,7 @@
             <string>CANCELAR</string>
            </property>
           </widget>
-          <widget class="QPushButton" name="pushButtonCadastraOutro">
+          <widget class="QPushButton" name="ButtonCadastraOutro">
            <property name="sizePolicy">
             <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
              <horstretch>1</horstretch>
@@ -4299,7 +4299,7 @@
            </property>
            <property name="minimumSize">
             <size>
-             <width>0</width>
+             <width>150</width>
              <height>50</height>
             </size>
            </property>
